# discord-bot-cli

./: .gitignore  MANIFEST.in  README.md  README.rst  pyproject.toml  requirements.txt  setup.py
discord_bot_cli/: __init__.py
discord_bot_cli/commands/: application.py  command.py  makedocstring.py
discord_bot_cli/commands/extensions/: cog_command.py  command_command.py
discord_bot_cli/commands/migrations/: make_command.py
discord_bot_cli/commands/models/: make_command.py
discord_bot_cli/commands/new/: git_handler.py  new_command.py
discord_bot_cli/commands/seeds/: make_command.py
discord_bot_cli/templates/: model.py
